Migrate deprecated URL constructor to URI